[common mobile] Fixed styles for transparent color

--- a/apps/common/mobile/resources/less/common.less
+++ b/apps/common/mobile/resources/less/common.less
@@ -79,6 +79,11 @@
                 z-index: 1;
                 border-radius: 1px;
             }
+            &.transparent {
+                background-repeat: no-repeat;
+                background-size: 100% 100%;
+                .encoded-svg-background("<svg xmlns='http://www.w3.org/2000/svg' x='0px' y='0px' viewBox='0 0 22 22' xml:space='preserve'><line stroke='#ff0000' stroke-linecap='undefined' stroke-linejoin='undefined' id='svg_1' y2='0' x2='22' y1='22' x1='0' stroke-width='2' fill='none'/></svg>");
+            }
         }
     }
     .row {
